2006-09-25  Brian Bidulock  <bidulock@openss7.org>

	* Makefile.am: minor formatting
	* acinclude.m4: spelling
	* src/drivers/inet.c: formatting changes
	* src/drivers/lis.conf.in: formatting changes

	* src/include/xti.h: updated headers, doxygenified
	* src/include/xti_inet.h: updated headers, doxygenified
	* src/include/sys/xti_inet.h: updated headers, doxygenified
	* src/include/sys/xti_ip.h: updated headers, doxygenified
	* src/include/sys/xti_sctp.h: updated headers, doxygenified
	* src/include/sys/xti_tcp.h: updated headers, doxygenified
	* src/include/sys/xti_udp.h: updated headers, doxygenified

2006-09-24  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updated release notes
	* NEWS: updated release notes
	* doc/manual/news.texi: updated release notes

2006-09-23  Brian Bidulock  <bidulock@openss7.org>

	* AUTHORS: updated news
	* doc/manual/news.texi: updated news
	* NEWS: updated news

2006-09-17  Brian Bidulock  <bidulock@openss7.org>
	
	* doc/manual/news.texi: major update notices
	* configure.ac: added 32-bit binary directory lib32/Makefile.am
	* scripts/check_libs: strip library symbol version on check

	* tests/atlocal.in: updated testsuite headers
	* tests/kernel.at: updated testsuite headers
	* tests/testsuite.at: updated testsuite headers
	* tests/testsuite-inet_raw2.at: updated testsuite headers
	* tests/testsuite-inet_raw.at: updated testsuite headers
	* tests/testsuite-inet_sctp.at: updated testsuite headers
	* tests/testsuite-inet_tcp.at: updated testsuite headers
	* tests/testsuite-inet_udp2.at: updated testsuite headers
	* tests/testsuite-inet_udp.at: updated testsuite headers

	* Makefile.am: added 32-bit compatibility libraries and binaries
	* strinet.spec.in: added 32-bit compatibility libraries and binaries

	* lib32/Makefile.am: added 32-bit compatibility makefile

2006-09-02  Brian Bidulock  <bidulock@openss7.org>

	* doc/manual/Makefile.am: missing bugs.texi from release
	* am/release.am: changes to pass distcheck