@@ -1,5 +1,9 @@
 2006-09-25  Brian Bidulock  <bidulock@openss7.org>
 
+	* acinclude.m4: reordered includes
+	* src/test/test-inet_raw.c: rationalized to stacks package
+	* src/test/test-inet_udp.c: rationalized to stacks package
+
 	* Makefile.am: minor formatting
 	* acinclude.m4: spelling
 	* src/drivers/inet.c: formatting changes
